web_app and requirements
function web_app page workling with streamlit and new requirements for it

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# this file contains the installation packages necessary to run SatLink app (GUI or code)
+# if you want to use satlink via web-app with limited functions, please use 'requirements_web.txt'
 itur
 tqdm
 pandas
